--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="./src/css/styles.css" rel="stylesheet"/>
     <title>Weather Application</title>
 </head>
 <body>
     <div class="wrapper">
 		<div class="header">
-
+			<h1>Weather application</h1>
 		</div>
         <div class="form">
             <form name="change_weather_settings">
-                <select name="cityes">
+                <select name="cities" id="cities">
 					<option>Brest</option>
 					<option>Gomel</option>
 					<option>Grodno</option>
@@ -22,14 +23,15 @@
 					<option>Vitebsk</option>
 				</select>
 				<div class="type-of-weather">
-					<input type="radio" name="type_of_weather" value="forecast">5 day / 3 hour </br>
-					<input type="radio" name="type_of_weather" value="weather">Current </br>
+					<input type="radio" name="type_of_weather" value="weather" checked>Current </br>
+					<input type="radio" name="type_of_weather" value="forecast">5 day / 3 hour </br>					
 				</div>				
             </form>
 		</div>
 		<div class="footer">
 
 		</div>
-    </div>
+	</div>
+	<script src="./src/js/app.js"></script>
 </body>
 </html>
