displaying of current weatheer was implemented

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 					<option>Mogilev</option>
 					<option>Vitebsk</option>
 				</select>
+				<input id="buttonGetWeather" type="button" value="Get Weather">
 				<div class="type-of-weather">
 					<input type="radio" name="type_of_weather" value="weather" checked>Current </br>
 					<input type="radio" name="type_of_weather" value="forecast">5 day / 3 hour </br>					
 				</div>				
             </form>
+		</div>
+		<div class="content" id="content">
+
 		</div>
 		<div class="footer">
 
