--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="./src/css/styles.css" rel="stylesheet"/>
     <title>Weather Application</title>
