here is bug was fixed that weather was displayed for not all cities

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		</div>
         <div class="form">
                 <select name="cities" id="cities">
-					<option>Brest</option>
-					<option>Gomel</option>
-					<option>Grodno</option>
-					<option>Minsk</option>
-					<option>Mogilev</option>
-					<option>Vitebsk</option>
+					<option value="Brest">Brest</option>
+					<option value="Homyel">Gomel</option>
+					<option value="Hrodna">Grodno</option>
+					<option value="Minsk">Minsk</option>
+					<option value="Mahilyow">Mogilev</option>
+					<option value="Vitsyebsk">Vitebsk</option>
 				</select>
 				<input id="buttonGetWeather" type="button" value="Get Weather">
 				<div class="type-of-weather">
